# minigrep

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  formatter.rs  fs.rs  lib.rs  main.rs  matcher.rs  sink.rs
src/matcher/: impls.rs  mod.rs
src/output/: formatter.rs  mod.rs  sinks.rs
src/search/: context.rs  mod.rs
