[package]
name = "minigrep"
version = "0.1.0"
edition = "2024"
description = """A simple grep clone written in Rust"""

[dependencies]
regex = "1"
clap = { version = "4.4", features = ["derive"] }
colored = "3"
downcast-rs = "2.0.1"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"